@@ -1,3 +1,7 @@
+2007-08-02  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/jpeg/jpegqual.c: sprinkled const qualifiers.
+
 2007-08-02  Raphaël Quinet  <raphael@gimp.org>
 
 	* plug-ins/jpeg/jpegqual.c: added many options, added a list of
